--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100072457794808"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://twitter.com/DanielGben49922"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/ogluck_dev/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="tel:+234 8078123476"><i class="fab fa-whatsapp"></i></a></li>
     </div>
 
     <!-- Hero Section -->
@@ -342,16 +342,16 @@
                     </div>
                 </div>
                 <div class="social-links">
-                    <a href="#" class="facebook">
+                    <a href="https://www.facebook.com/profile.php?id=100072457794808" class="facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="#" class="instagram">
+                    <a href="https://www.instagram.com/ogluck_dev/" class="instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="#" class="twitter">
+                    <a href="https://twitter.com/DanielGben49922" class="twitter">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a href="#" class="whatsapp">
+                    <a href="tel:+234 8078123476" class="whatsapp">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
