--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="about-content">
             <div class="about-image" data-aos="fade-right">
                 <div class="image-wrapper">
-                    <img src="profile-img.jpg" alt="Your Name">
+                    <img src="WhatsApp Image 2024-12-15 at 16.33.18_3b5be541.jpg" alt="Your Name">
                     <div class="image-shape"></div>
                 </div>
             </div>
@@ -207,6 +207,7 @@
                     <div class="tech-stack">
                         <span>HTML</span>
                         <span>CSS</span>
+                        <span>JS</span>
                         <span>PHP</span>
                         <span>MySQL</span>
                     </div>
@@ -216,13 +217,13 @@
             <!-- Portfolio Item 2 -->
             <div class="portfolio-item" data-category="php" data-aos="fade-up">
                 <div class="portfolio-img">
-                    <img src="images/screencapture-localhost-D-I-S-app-index-php-2024-11-02-10_43_07.png" alt="Project 2">
+                    <img src="images/dis-groups.png" alt="Project 2">
                 </div>
                 <div class="portfolio-content">
                     <h3>D.I.S - property listing app</h3>
                     <p>PHP Application</p>
                     <div class="portfolio-links">
-                        <a href="#" class="live-demo">
+                        <a href="https://disgroups.com/" class="live-demo">
                             <i class="fas fa-external-link-alt"></i> Live Demo
                         </a>
                         <a href="#" class="source-code">
@@ -237,6 +238,34 @@
                 </div>
             </div>
 
+            <!-- Portfolio Item 3 -->
+            <div class="portfolio-item" data-category="web" data-aos="fade-up">
+                <div class="portfolio-img">
+                    <img src="images/culinary-circle.png" alt="Project 2">
+                </div>
+                <div class="portfolio-content">
+                    <h3>Culinary Circle</h3>
+                    <p>Web Development</p>
+                    <div class="portfolio-links">
+                        <a href="#" class="live-demo">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="#" class="source-code">
+                            <i class="fab fa-github"></i> Source Code
+                        </a>
+                    </div>
+                    <div class="tech-stack">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JS</span>
+                        <span>PHP</span>
+                        <span>MySQL</span>
+                        <span>Tailwind</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Portfolio Item 4 -->
             <div class="portfolio-item" data-category="frontend" data-aos="fade-up">
                 <div class="portfolio-img">
                     <img src="images/Screenshot 2024-08-08 114110.png" alt="Project 3">
@@ -260,6 +289,7 @@
                 </div>
             </div>
 
+            <!-- Portfolio Item 5 -->
             <div class="portfolio-item" data-category="frontend" data-aos="fade-up">
                 <div class="portfolio-img">
                     <img src="images/social.profile.png" alt="Project 3">
@@ -282,7 +312,7 @@
                 </div>
             </div>
 
-            <!-- Portfolio Item 3 -->
+            <!-- Portfolio Item 6 -->
             <div class="portfolio-item" data-category="frontend" data-aos="fade-up">
                 <div class="portfolio-img">
                     <img src="images/download.png" alt="Project 3">
