--- a/index.html
+++ b/index.html
@@ -405,11 +405,14 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Nexa. All rights reserved.</p>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Gbenga Daniel (Nexa). All rights reserved. Made with ❤️ in Nigeria</p>
+        <div class="footer-links">
+            <a href="#privacy">Privacy Policy</a>
+            <a href="#terms">Terms of Service</a>
+            <a href="#sitemap">Sitemap</a>
         </div>
-    </footer>
+    </div>
 
     <!-- Back to Top Button -->
     <button id="backToTop" class="back-to-top" title="Go to top">
