--- a/index.html
+++ b/index.html
@@ -407,7 +407,12 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 Nexa. All rights reserved.</p>
+            <p>&copy; 2024 Gbenga Daniel (Nexa). All rights reserved. Made with ❤️ in Nigeria</p>
+        <div class="footer-links">
+            <a href="#privacy">Privacy Policy</a>
+            <a href="#terms">Terms of Service</a>
+            <a href="#sitemap">Sitemap</a>
+        </div>
         </div>
     </footer>
 
