--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="about-content">
             <div class="about-image" data-aos="fade-right">
                 <div class="image-wrapper">
-                    <img src="profile-img.jpg" alt="Your Name">
+                    <img src="WhatsApp Image 2024-12-15 at 16.33.18_3b5be541.jpg" alt="Your Name">
                     <div class="image-shape"></div>
                 </div>
             </div>
@@ -86,12 +86,12 @@
                     </div>
                     <div class="detail-item">
                         <i class="fas fa-graduation-cap"></i>
-                        <span>B.Sc. Computer Science</span>
+                        <span>Senior Secondary School Certificate</span>
                     </div>
                 </div>
                 
                 <div class="about-buttons">
-                    <a href="cv/Daniel Gbenga Emmanuel - Resume.docx" class="cta-button" download>Download CV</a>
+                    <a href="cv/Gbenga Daniel - CV.pdf" class="cta-button" download>Download CV</a>
                 </div>
             </div>
         </div>
