--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=100072457794808"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100072457794808"><i class="fab fa-facebook-f"></i></a>
             <li><a href="https://twitter.com/DanielGben49922"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://www.instagram.com/ogluck_dev/"><i class="fab fa-instagram"></i></a></li>
             <li><a href="tel:+234 8078123476"><i class="fab fa-whatsapp"></i></a></li>
@@ -405,12 +405,17 @@
     </section>
 
     <!-- Footer -->
-    <div class="footer-bottom">
-        <p>&copy; 2024 Gbenga Daniel (Nexa). All rights reserved. Made with ❤️ in Nigeria</p>
-        <div class="footer-links">
-            <a href="#privacy">Privacy Policy</a>
-            <a href="#terms">Terms of Service</a>
-            <a href="#sitemap">Sitemap</a>
+    <div class="footer-bottom enhanced-footer">
+        <div class="footer-content">
+            <p class="footer-copy">
+                &copy; 2024 <span class="footer-name">Gbenga Daniel (Nexa)</span>. All rights reserved.<br>
+                <span class="footer-made">Made with <span class="footer-heart">❤️</span> in Nigeria</span>
+            </p>
+            <div class="footer-links">
+                <a href="#privacy"><i class="fas fa-user-shield"></i> Privacy Policy</a>
+                <a href="#terms"><i class="fas fa-file-contract"></i> Terms of Service</a>
+                <a href="#sitemap"><i class="fas fa-sitemap"></i> Sitemap</a>
+            </div>
         </div>
     </div>
 
@@ -541,4 +546,4 @@
         document.head.appendChild(style);
     </script>
 </body>
-</html> 
+</html>
