--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="about-content">
             <div class="about-image" data-aos="fade-right">
                 <div class="image-wrapper">
-                    <img src="WhatsApp Image 2024-12-15 at 16.33.18_3b5be541.jpg" alt="Your Name">
+                    <img src="Gbenga-daniel-image.jpg" alt="Your Name">
                     <div class="image-shape"></div>
                 </div>
             </div>
